# C_xml

./: CMakeLists.txt  README.md  main.cpp  main_copy.cpp  test_xml.xml
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  main  rapid.xml  test.xml
